# offline-proxy

./: .gitignore  CMakeLists.txt  CMakePresets.json  OfflineMod.win32.sln  README.MD  mingw.toolchain  vcpkg.json
OfflineMod.win32/: CMakeLists.txt  OfflineMod.win32.vcxproj  OfflineMod.win32.vcxproj.filters  Resource.rc  Source.def  curl_exp.cpp  main.cpp  pch.cpp  pch.h
detours/: CMakeLists.txt
